Fix spacing of explore page cards

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -500,11 +500,6 @@ ul {
   text-decoration: none;
 }
 
-.petition-ul {
-    bottom: 50px;
-    position: relative;
-}
-
 .navbar-brand-styling {
   display: inline-flex; /* make element size relative to content */
   align-items: center; /* vertical alignment of contents */
